--- a/index.html
+++ b/index.html
@@ -31,26 +31,30 @@
     	.btn {
     		margin: 10px;
     	}
+
+    	input {
+    		padding: 2px 0 2px 2px;
+    	}
     </style>
 </head>
 <body >
-	<div class="container" ng-controller="waitStaffCtrl" ng-submit="submit();">
+	<div class="container" ng-controller="waitStaffCtrl" >
 		<h1 class="text-center">Waitstaff Calculator</h1>
-		<div class="component meal-details col-md-5">
+		<div class="component meal-details col-md-5" ng-controller="mealDetailsCtrl" ng-submit="submit();">
 			<h2>Enter Meal Details</h2>
 			<hr>
 			<form name="detailsForm"  novalidate>
 				<div class="row mealPrice">
 					<div class="col-md-5 text-right">Base Meal Price: </div>
-					<div class="col-md-6 text-left">$ <input ng-class="{error: submitted && detailsForm.mealPrice.$invalid}" name="mealPrice" type="number" placeholder="meal price" ng-model="mealDetails.mealPrice" required></div>
+					<div class="col-md-6 text-left">$ <input ng-class="{error: submitted && detailsForm.mealPrice.$invalid}" name="mealPrice" type="number" placeholder="meal price" ng-model="data.mealPrice" required></div>
 				</div>
 				<div class="row taxRate">
 					<div class="col-md-5 text-right">Tax Rate:</div>
-					<div class="col-md-6 text-left">% <input ng-class="{error: submitted && detailsForm.taxRate.$invalid}" name="taxRate" type="number" placeholder="tax" ng-model="mealDetails.taxRate" max="99" ng-maxlength="2" required></div>
+					<div class="col-md-6 text-left">% <input ng-class="{error: submitted && detailsForm.taxRate.$invalid}" name="taxRate" type="number" placeholder="tax" ng-model="data.taxRate" max="99" ng-maxlength="2" required></div>
 				</div>
 				<div class="row tipPercentage">
 					<div class="col-md-5 text-right">Tip Percentage:</div>
-					<div class="col-md-6 text-left">% <input ng-class="{error: submitted && detailsForm.tipPercentage.$invalid}" name="tipPercentage" type="number" placeholder="tip" ng-model="mealDetails.tipPercentage" required></div>
+					<div class="col-md-6 text-left">% <input ng-class="{error: submitted && detailsForm.tipPercentage.$invalid}" name="tipPercentage" type="number" placeholder="tip" ng-model="data.tipPercentage" required></div>
 				</div>
 				<div class="row text-center">
 					<input type="submit" class="btn btn-primary submit"  value="Submit"/><button type="button" ng-click="clearForm()" class="btn">Cancel</button>
@@ -58,37 +62,37 @@
 			</form>
 		</div>
 		<div class="out-container col-md-5">
-			<div class="row component meal-details col-md-11">
+			<div class="row component meal-details col-md-11" ng-controller="customerChargesCtrl">
 				<h2>Customer Charges</h2>
 				<hr>
 				<div class="row">
 					<div class="col-md-5 text-right">Subtotal:</div>
-					<div class="col-md-5 text-left"><span>{{ subTotal(mealDetails.mealPrice, mealDetails.taxRate ) | currency}}</span></div>
+					<div class="col-md-5 text-left"><span>{{ data.subTotal | currency}}</span></div>
 				</div>
 				<div class="row">
 					<div class="col-md-5 text-right">Tip:</div>
-					<div class="col-md-5 text-left"><span>{{ tip( mealDetails.mealPrice, mealDetails.tipPercentage ) | currency}}</span></div>
+					<div class="col-md-5 text-left"><span>{{ data.tip | currency}}</span></div>
 				</div>
 				<hr>
 				<div class="row">
 					<div class="col-md-5 text-right">Total:</div>
-					<div class="col-md-5 text-left"><span>{{  subTotal(mealDetails.mealPrice, mealDetails.taxRate ) + tip( mealDetails.mealPrice, mealDetails.tipPercentage ) | currency}}</span></div>
+					<div class="col-md-5 text-left"><span>{{  data.total | currency}}</span></div>
 				</div>
 			</div>
-			<div class="row component meal-details col-md-11">
+			<div class="row component meal-details col-md-11" ng-controller="earningsInfoCtrl">
 				<h2>My Earnings Info</h2>
 				<hr>
 				<div class="row">
 					<div class="col-md-5 text-right">Tip Total:</div>
-					<div class="col-md-5 text-left"><span>{{ earningsInfo.tipTotal | currency }}</span></div>
+					<div class="col-md-5 text-left"><span>{{ data.tipTotal | currency }}</span></div>
 				</div>
 				<div class="row">
 					<div class="col-md-5 text-right">Meal Count:</div>
-					<div class="col-md-5 text-left"><span>{{earningsInfo.mealCount | number }}</span></div>
+					<div class="col-md-5 text-left"><span>{{data.mealCount | number }}</span></div>
 				</div>
 				<div class="row">
 					<div class="col-md-5 text-right">Average Tip Per Meal:</div>
-					<div class="col-md-5 text-left"><span>{{earningsInfo.averageTip | currency }}</span></div>
+					<div class="col-md-5 text-left"><span>{{data.averageTip | currency }}</span></div>
 				</div>
 			</div>
 			<div class="text-right"><button class="btn" ng-click="reset();">Reset</button></div>
