--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body >
 	<div class="container" ng-controller="waitStaffCtrl" >
-		<h1 class="text-center">Waitstaff Calculator</h1>
+		<h1 class="text-center">Waitstaff Calculator Update</h1>
 		<div class="component meal-details col-md-5" ng-controller="mealDetailsCtrl" ng-submit="submit();">
 			<h2>Enter Meal Details</h2>
 			<hr>
